# pyquasar

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
examples/: ElectromagneticTests.ipynb  PolynomicTests.ipynb  circular_current.geo  dipole2d.geo  test.geo
src/pyquasar/: __init__.py  _typing.py  bem.py  bem_domain.py  coils.py  fem.py  fem_domain.py  feti_problem.py  load_mesh.py  mesh.py
tests/: test_magnetostatic.py  test_polynomic.py
