[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "pyquasar"
version = "0.1.0"
authors = [{ name = "Ilya Stupakov", email = "istupakov@gmail.com" }]
description = "Finite and boundary element methods on Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = ["gmsh>=5.0.0.dev1", "numpy>=2.4.4", "scipy>=1.17.1"]
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]

[dependency-groups]
dev = [
    "ipykernel<7",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nbstripout>=0.9.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "ty>=0.0.31",
]

[tool.ruff]
target-version = "py314"
src = ["src"]
extend-exclude = ["examples/*.ipynb"]

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "NPY", "SIM", "UP"]
ignore = [
    "B011", # Keep numerical convergence assertions compact for now.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B007", "B905", "D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ty.environment]
python-version = "3.14"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
all = "warn"

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
division-by-zero = "ignore"

[[tool.uv.index]]
url = "https://gmsh.info/python-packages-dev-nox"

[tool.coverage.run]
source = ["src"]
